Fix board overflow

--- a/src/renderer/App/components/Board/style.scss
+++ b/src/renderer/App/components/Board/style.scss
@@ -5,7 +5,7 @@
   top: 0px;
   left: 50px;
   position: absolute;
-  overflow-x: hidden;
+  overflow: hidden;
   background: linear-gradient(
     200.96deg,
     #fedc2a -29.09%,
